--- a/inetpub/wwwroot/ServicesMvc/Views/Remarketing/Belastungsanzeigen/GridGutachten.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Remarketing/Belastungsanzeigen/GridGutachten.cshtml
@@ -1,5 +1,4 @@
 ﻿@using CkgDomainLogic.Remarketing.Models
-@model CkgDomainLogic.Remarketing.ViewModels.BelastungsanzeigenViewModel
 
 @{ var gridName = "GridGutachten"; }
 
@@ -33,6 +32,6 @@
 
 <div class="form-horizontal"> 
     <div class="form-actions">
-        <button type="button" class="btn" onclick="CloseGutachten();">@Localize.Back <i class="m-icon-swapleft m-icon-white"></i></button>
+        <button type="button" class="btn" onclick="CloseGutachten();"><i class="m-icon-swapleft"></i> @Localize.Back</button>
     </div>
 </div>
