--- a/inetpub/wwwroot/ServicesMvc/Views/Remarketing/Belastungsanzeigen/Partial/InfoForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Remarketing/Belastungsanzeigen/Partial/InfoForm.cshtml
@@ -10,6 +10,6 @@
 
 
     <div class="form-actions">
-        <button type="button" class="btn" onclick="CloseBelastungsanzeigeDetail();">@Localize.Close</button>
+        <button type="button" class="btn" onclick="CloseBelastungsanzeigeDetail(true);">@Localize.Close</button>
     </div>
 </div>
