--- a/inetpub/wwwroot/ServicesMvc/Views/Remarketing/Belastungsanzeigen/Suche.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Remarketing/Belastungsanzeigen/Suche.cshtml
@@ -21,7 +21,7 @@
 
         @Html.FormDateRangePickerFor(m => m.EingangsdatumRange)
 
-        @Html.FormTextBoxFor(m => m.Vertragsjahr, new { @class = "m-wrap", maxlength = 4 })
+        @Html.FormTextBoxFor(m => m.Vertragsjahr, new { @class = "m-wrap xsmall", maxlength = 4 })
         
         <div class="space10"></div>
 
