--- a/inetpub/wwwroot/ServicesMvc/Views/Remarketing/Belastungsanzeigen/Partial/SetReklamationForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Remarketing/Belastungsanzeigen/Partial/SetReklamationForm.cshtml
@@ -2,7 +2,7 @@
 
 <div id="divSetReklamation" class="margin-top-20">
     @using (Ajax.BeginForm("SetReklamationForm", "Remarketing", null,
-        new MvcAjaxOptions { UpdateTargetId = "divSetReklamation", OnComplete = "CloseBelastungsanzeigeDetail();" },
+        new MvcAjaxOptions { UpdateTargetId = "divSetReklamation", OnComplete = "CloseBelastungsanzeigeDetail(false);" },
         new { @class = "form-horizontal", id = "AjaxFormSetReklamation" }))
     {
         @Html.FormValidationSummary()
@@ -27,7 +27,7 @@
         
         <div class="form-actions">
             <button type="submit" class="btn green"><i class="icon-ok"></i> @Localize.Apply</button>
-            <button type="button" class="btn" onclick="CloseBelastungsanzeigeDetail();">@Localize.Cancel</button>
+            <button type="button" class="btn" onclick="CloseBelastungsanzeigeDetail(true);">@Localize.Cancel</button>
         </div>
 
         <script type="text/javascript">
