--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/UserMenuUserInfoDropdown.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/UserMenuUserInfoDropdown.cshtml
@@ -5,7 +5,7 @@
         {
             <div id="divUserbild" >
                 <div class="userbild" style="background-color: white;">
-                    <img alt="@Model.UserNameForDisplay" src="~/assets/img/blondeFrau.jpg">
+                    <img alt="@Model.UserNameForDisplay" src="~/_Themes/AH2015/images/blondeFrau.jpg">
                 </div>
             </div>
         }
