div. Anpassungen Sonderzulassungen

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Ersatzkennzeichen.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Ersatzkennzeichen.cshtml
@@ -20,5 +20,5 @@
 
 <h4>@Localize.LicenseNo</h4>
 
-@Html.Partial("Partial/ErsatzkennzeichenForm", @Model.Zulassung.Fahrzeugdaten)
+@Html.Partial("Partial/ErsatzkennzeichenForm", @Model.Zulassung.GetErsatzkennzeichendatenModel())
 
