--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Haendlerkennzeichen.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Haendlerkennzeichen.cshtml
@@ -24,5 +24,5 @@
 
 <h4>@Localize.Dealer @Localize.LicenseNo</h4>
 
-@Html.Partial("Partial/HaendlerkennzeichenForm", @Model.Zulassung.Fahrzeugdaten)
+@Html.Partial("Partial/HaendlerkennzeichenForm", @Model.Zulassung.GetHaendlerkennzeichendatenModel())
 
